--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,8 @@
 <body>
     <h1>login page</h1>
     <form action="/login" method="post">
-        <input type="text" name="email">
-        <input type="text" name="password">
+        <input type="text" name="email" placeholder="Enter you Email" required>
+        <input type="text" name="password" placeholder="Enter Your Password" required>
         <input type="submit">
     </form>
 </body>
